# telegram-video-reverse-bot

./: .dockerignore  .editorconfig  .gitignore  .mise.toml  .tool-versions  Chart.yaml  Dockerfile  Makefile  README.md  bot.py  pyproject.toml  renovate.json  values.yaml
.github/workflows/: workflow.yml
chart/: values.yaml
chart/templates/: secrets.yaml  update-handler.yaml
src/app/: __main__.py  bot.py  config.py
templates/: secrets.yaml  update-handler.yaml
terraform/: .terraform.lock.hcl  api_gateway.tf  api_gateway_domain.tf  api_gateway_handle_update.tf  api_gateway_vars.tf  bot.tf  bot_vars.tf  lambda_base.tf  lambda_convert.tf  lambda_handle_update.tf  lambda_layer.tf  providers.tf
