[project]
requires-python = "==3.13.*"
name = "app"
description = "Reverses video messages"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.1",
    "click >=8.1.3, <9.0.0",
    "httpx",
    "python-telegram-bot ==21.11.1",
    "sentry-sdk >=2.0.0, <3.0.0",
]

[dependency-groups]
dev = [
    "mypy ==1.15.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.9.9",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
